--- a/app/src/main/res/layout/detail_picture_item.xml
+++ b/app/src/main/res/layout/detail_picture_item.xml
@@ -5,18 +5,19 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:elevation="3dp"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
         tools:targetApi="lollipop">
 
     <ImageView
             android:id="@+id/picture_detail"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:paddingEnd="3dp"
+            tools:ignore="RtlSymmetry" />
 
     <TextView
             android:id="@+id/description_pic_text"
@@ -24,6 +25,7 @@
             android:layout_height="20dp"
             android:textColor="@android:color/white"
             android:gravity="center_horizontal"
+            android:background="@color/transparent_black"
             app:layout_constraintBottom_toBottomOf="@+id/picture_detail"
             app:layout_constraintEnd_toEndOf="@+id/picture_detail" />
 
