--- a/app/src/main/res/layout/estate_list_item.xml
+++ b/app/src/main/res/layout/estate_list_item.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/constraint_item"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="150dp"
+        android:elevation="2dp"
+        android:background="@drawable/selector_item_color"
+        tools:targetApi="lollipop">
 
     <ImageView
             android:id="@+id/estate_picture"
@@ -55,6 +59,13 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/barrier"
             app:layout_constraintTop_toBottomOf="@+id/estate_town" />
+
+<!--    <View-->
+<!--            android:id="@+id/line1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="1dp"-->
+<!--            android:background="@android:color/darker_gray"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/estate_picture" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
