--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#81ADF9</color>
     <color name="colorPrimaryDark">#383ffb</color>
-    <color name="colorAccent">#64B5F6</color>
+    <color name="colorAccent">#EC407A</color>
     <color name="orange_red">#ff8645</color>
     <color name="light_grey">#e6e6e6</color>
+    <color name="white">#ffffff</color>
+    <color name="transparent_black">#66000000</color>
 </resources>
